; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/mp4/extr_mp4_writer.c_mp4_write_box_mdia.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/mp4/extr_mp4_writer.c_mp4_write_box_mdia.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VC_CONTAINER_SUCCESS = common dso_local global i64 0, align 8
@MP4_BOX_TYPE_MDHD = common dso_local global i32 0, align 4
@MP4_BOX_TYPE_HDLR = common dso_local global i32 0, align 4
@MP4_BOX_TYPE_MINF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @mp4_write_box_mdia to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mp4_write_box_mdia(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  store i64 %5, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @MP4_BOX_TYPE_MDHD, align 4
  %8 = call i64 @mp4_write_box(i32* %6, i32 %7)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i64, i64* %4, align 8
  store i64 %13, i64* %2, align 8
  br label %34

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @MP4_BOX_TYPE_HDLR, align 4
  %17 = call i64 @mp4_write_box(i32* %15, i32 %16)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i64, i64* %4, align 8
  store i64 %22, i64* %2, align 8
  br label %34

23:                                               ; preds = %14
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* @MP4_BOX_TYPE_MINF, align 4
  %26 = call i64 @mp4_write_box(i32* %24, i32 %25)
  store i64 %26, i64* %4, align 8
  %27 = load i64, i64* %4, align 8
  %28 = load i64, i64* @VC_CONTAINER_SUCCESS, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %23
  %31 = load i64, i64* %4, align 8
  store i64 %31, i64* %2, align 8
  br label %34

32:                                               ; preds = %23
  %33 = load i64, i64* %4, align 8
  store i64 %33, i64* %2, align 8
  br label %34

34:                                               ; preds = %32, %30, %21, %12
  %35 = load i64, i64* %2, align 8
  ret i64 %35
}

declare dso_local i64 @mp4_write_box(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
